added browser icon and footer styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Icon made by Webalysfrom www.flaticon.com -->
+    <link rel="icon" href="/images/pokeball.png">
+
     <link rel="stylesheet" href="style.css">
-    <title>Catch em all!</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <title>Catch em all! | Pokemon Index</title>
 </head>
 <body>
     <header>
@@ -14,7 +19,7 @@
 
     <nav>
         <div class="search-bar">
-            <input class="search" type="text" placeholder="Search for a pokemon..." onkeypress="return (event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || (event.charCode==32)">
+            <input class="search" type="text" placeholder="Search here..." onkeypress="return (event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || (event.charCode==32)">
         </div>
     </nav>
 
@@ -24,6 +29,8 @@
 
     <footer>
         <p>Made by <a href="http://tshaw.co.uk/">Tom Shaw</a>.</p>
+        <a href="https://github.com/tomshaw650" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/tomshawdev" target="_blank"><i class="fab fa-twitter"></i></a>
     </footer>
 
 <script src="main.js"></script>
