small style changes and accessibility fixes
changed background colour

fixed accessibility problems (no link text, no input label)

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <header>
-        <h1>Catch em all!</h1>
+        <h1>Catch 'em all!</h1>
     </header>
 
     <nav>
         <div class="search-bar">
-            <input class="search" type="text" placeholder="Search here..." onkeypress="return (event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || (event.charCode==32)">
+            <input class="search" type="text" label="Search a Pokemon" placeholder="Search a Pokémon..." onkeypress="return (event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || (event.charCode==32)">
         </div>
     </nav>
 
@@ -29,8 +29,15 @@
 
     <footer>
         <p>Made by <a href="http://tshaw.co.uk/">Tom Shaw</a>.</p>
-        <a href="https://github.com/tomshaw650" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/tomshawdev" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/tomshaw650" target="_blank">
+            <span>GitHub</span>
+            <i class="fab fa-github"></i>
+        </a>
+
+        <a href="https://twitter.com/tomshawdev" target="_blank">
+            <span>Twitter</span>
+            <i class="fab fa-twitter"></i>
+        </a>
     </footer>
 
 <script src="main.js"></script>
